--- a/CinemaReview/app/src/main/res/values/strings.xml
+++ b/CinemaReview/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
 
     <!--    SEARCH VIEW-->
     <string name="search_results_empty">Sin resultados</string>
+    <string name="search_label_input">Buscar pelicula</string>
 
     <!--    MOVIE_REVIEW_ITEM-->
     <string name="movie_review_shared">COMPARTIR</string>
